fixing containers, cards alignments, search bar text, footer sticky bottom, enhancing card shadowing

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -6,7 +6,7 @@
 
 .card {
 margin: 2rem;
-box-shadow: 2px 2px 3px grey
+box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 
